# Taska

./: .env.example  .gitignore  README.md  To-Do-List.md  pyproject.toml  requirements.txt
src/taska/: __init__.py  config.py  constants.py  database.py  main.py
src/taska/auth/: dependencies.py  oauth.py  security.py
src/taska/models/: __init__.py  invitation.py  project.py  site_settings.py  tag.py  user.py
src/taska/routes/: __init__.py  account.py  admin.py  auth.py  dashboard.py  invite.py  oauth.py  profiles.py  projects.py  setup.py
src/taska/services/: account.py  bootstrap.py  invitation.py  profiles.py  projects.py  setup.py  token_generator.py
src/taska/static/css/: style.css
src/taska/templates/: base.html  home.html  invite.html  login.html  setup.html
src/taska/templates/account/: profile.html
src/taska/templates/admin/: dashboard.html  invitations.html  tokens.html
src/taska/templates/dashboard/: admin.html  member.html
src/taska/templates/profiles/: detail.html  list.html
src/taska/templates/projects/: detail.html  list.html  task_detail.html
src/taska/utils/: datetime.py
tests/: conftest.py  test_account.py  test_auth.py  test_profiles.py  test_projects.py
